Refactor core language implementation for modern Java idioms
- Extract FrameState to separate file from ResumableState
- Split ReLangLauncher into focused classes (LspServer, Repl, FileRunner)
- Add UNIT constant and evaluateAsBoolean helper to ReLangNode
- Replace deprecated APIs (getCurrentContext, createBinaryProfile)
- Use Java 25 pattern matching and switch expressions in parser
- Optimize restoreLocals with cached slot-name lookup map
- Convert SuspendedResult to record, add @Serial annotations
- Fix relang-compiler build dependency ordering